--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,7 @@
           integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI="
           crossorigin=""/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <title>letno</title>
 </head>
 <body>
 <div id="app"></div>
